--- a/src/job.yml
+++ b/src/job.yml
@@ -1,15 +1,15 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
-code: model
+code: src/model
 command: >-
-  python 
-  --
-  --
+  python train.py
+  --training_data ${{inputs.data}}
+  --reg_rate ${{inputs.reg_rate}}
 inputs:
   training_data: 
     type: uri_folder 
-    path: 
+    path: azureml://subscriptions/035dee2d-8c73-4fdb-bfba-d409d08d2128/resourcegroups/mslearn-mlops-rg/workspaces/mslearn-mlops-aml/datastores/workspaceblobstore/paths/UI/2025-04-27_002701_UTC
   reg_rate: 0.01
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
-compute: 
-experiment_name: 
-description: 
+compute: azureml:aml-instance
+experiment_name: diabetes-data-example
+description: Train a classification model on diabetes data using a registered dataset as input.
