error in job.yml change on code train.py location

--- a/src/job.yml
+++ b/src/job.yml
@@ -1,7 +1,9 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
-code: .
+code: src/model
+command: python train.py
+
 command: >-
-  python src/model/train.py
+  python train.py
   --training_data ${{inputs.training_data}}
   --reg_rate ${{inputs.reg_rate}}
 inputs:
