--- a/src/job.yml
+++ b/src/job.yml
@@ -1,9 +1,7 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
-code: src/model
-command: python train.py
-
+code: .
 command: >-
-  python train.py
+  python model/train.py
   --training_data ${{inputs.training_data}}
   --reg_rate ${{inputs.reg_rate}}
 inputs:
