--- a/.github/workflows/04-code-checks.yml
+++ b/.github/workflows/04-code-checks.yml
@@ -1,7 +1,7 @@
 name: Code checks
 
 on:
-  workflow_dispatch:
+  pull_request:
 
 jobs:
   job1:
@@ -20,5 +20,24 @@ jobs:
     - name: Run linting tests
       run: | 
         flake8 src/model/
+  test:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
 
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.8'
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install pytest
+
+      - name: Run Pytest
+        run: pytest tests/
 
