--- a/.github/workflows/05-unit-tests.yml
+++ b/.github/workflows/05-unit-tests.yml
@@ -1,27 +1,35 @@
-name: Unit Tests
+# .github/workflows/05-unit-tests.yml
+name: Code Checks
 
 on:
   pull_request:
     branches: [ main ]
 
 jobs:
-  pytest:
-    name: Pytest
+  job2:
+    name: unit testing
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Check out repo
+      uses: actions/checkout@v3
 
-      - name: Setup Python 3.8
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.8'
+    - name: Use Python version 3.8
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.8'
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          pip install pytest
+    - name: Downgrade pip below 24.1
+      run: python -m pip install 'pip<24.1'
 
-      - name: Run tests
-        run: pytest tests/
+    - name: Install dependencies
+      run: |
+        python -m pip install -r requirements.txt
+
+    - name: Install pytest
+      run: |
+        python -m pip install pytest
+
+    - name: Run unit tests
+      run: |
+        pytest tests/
