--- a/.github/workflows/06-trigger-job-environments.yml
+++ b/.github/workflows/06-trigger-job-environments.yml
@@ -56,5 +56,5 @@ jobs:
           az ml job create --file src/job.yml \
             --resource-group mslearn-prod-mlops-rg \
             --workspace-name mslearn-prod-mlops-aml \
-            --set inputs.training_data.path=azureml:diabetes-prod-folder@latest \
+            --set inputs.training_data.path=azureml:diabetes-prod-folder_2@latest \
             --stream
