--- a/deployment.yml
+++ b/deployment.yml
@@ -1,6 +1,7 @@
-$schema: https://azuremlschemas.azureedge.net/latest/online-endpoint-deployment.schema.json
-name: blue                    # your deployment’s name
+$schema: https://azuremlschemas.azureedge.net/latest/managedOnlineDeployment.schema.json
+name: blue
 endpoint_name: diabetes-endpoint
-model: diabetes_prod_model:latest
-instance_type: Standard_DS1_v2
+model: azureml:diabetes_prod_model:1          # note the azureml: prefix + version
+instance_type: Standard_D2as_v4
 instance_count: 1
+# traffic: 100                              # optional—100% by default
