--- a/deployment.yml
+++ b/deployment.yml
@@ -4,4 +4,4 @@ endpoint_name: diabetes-endpoint
 model: azureml:diabetes_prod_model:1          # note the azureml: prefix + version
 instance_type: Standard_D2as_v4
 instance_count: 1
-# traffic: 100                              # optional—100% by default
+all_traffic: true
