--- a/.github/workflows/07-deploy-registered-model.yml
+++ b/.github/workflows/07-deploy-registered-model.yml
@@ -5,32 +5,35 @@ on:
 
 jobs:
   deploy:
-
+    name: Deploy model to online endpoint
     runs-on: ubuntu-latest
     environment: production
 
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Azure login (Production)
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_PROD_CREDENTIALS }}
+    - name: Azure login (Production)
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_PROD_CREDENTIALS }}
 
-      - name: Install Azure ML extension
-        run: az extension add -n ml -y
+    - name: Install Azure ML extension
+      run: az extension add -n ml -y
 
-      - name: Create online endpoint (idempotent)
-        run: |
-          az ml online-endpoint create \
-            --file endpoint.yml \
-            --resource-group mslearn-prod-mlops-rg \
-            --workspace-name mslearn-prod-mlops-aml
+    - name: Create online endpoint (idempotent)
+      run: |
+        az ml online-endpoint create \
+          --file endpoint.yml \
+          --resource-group mslearn-prod-mlops-rg \
+          --workspace-name mslearn-prod-mlops-aml \
+        || true
 
-      - name: Deploy latest model
-        run: |
-          az ml online-deployment create \
-            --f deployment.yml \
-            --resource-group mslearn-prod-mlops-rg \
-            --workspace-name mslearn-prod-mlops-aml \
-            --all-traffic
+    - name: Deploy registered model
+      run: |
+        az ml online-deployment create \
+          --file deployment.yml \
+          --resource-group mslearn-prod-mlops-rg \
+          --workspace-name mslearn-prod-mlops-aml \
+          --all-traffic \
+          --no-wait
