--- a/endpoint.yml
+++ b/endpoint.yml
@@ -1,3 +1,5 @@
 $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineEndpoint.schema.json
 name: diabetes-endpoint
 auth_mode: key
+traffic:
+  blue: 100
