--- a/.github/workflows/07-deploy-registered-model.yml
+++ b/.github/workflows/07-deploy-registered-model.yml
@@ -26,13 +26,11 @@ jobs:
         az ml online-endpoint create \
           --file endpoint.yml \
           --resource-group mslearn-prod-mlops-rg \
-          --workspace-name mslearn-prod-mlops-aml \
-        || true
+          --workspace-name mslearn-prod-mlops-aml
     - name: Deploy registered model
       run: |
         az ml online-deployment create \
           --file deployment.yml \
           --resource-group mslearn-prod-mlops-rg \
           --workspace-name mslearn-prod-mlops-aml \
-          --all-traffic \
           --no-wait
