--- a/endpoint.yml
+++ b/endpoint.yml
@@ -1,3 +1,6 @@
+# endpoint.yml
 $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineEndpoint.schema.json
 name: diabetes-endpoint
 auth_mode: key
+traffic:
+  diabetes-deployment: 100
