change to manul 06

--- a/.github/workflows/06-trigger-job-environments.yml
+++ b/.github/workflows/06-trigger-job-environments.yml
@@ -3,9 +3,7 @@ name: CI/CD for Azure ML Environments
 # This workflow trains in dev, then (on success + approval) in prod.
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
 
 jobs:
   experiment:
