--- a/deployment.yml
+++ b/deployment.yml
@@ -1,7 +1,7 @@
 $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineDeployment.schema.json
 
 name: diabetes-deployment
-endpoint_name: diabetes-endpoint
+endpoint_name: diabetes-endpoint-xyz
 
 model:
   name: diabetes_prod_model
