--- a/deployment.yml
+++ b/deployment.yml
@@ -8,5 +8,7 @@ model:
   version: 1
   type: mlflow_model
 
+environment: azureml:AzureML-mlflow-1.18-ubuntu20.04-py38:1
+
 instance_type: Standard_D2as_v4
 instance_count: 1
