--- a/.github/workflows/07-deploy-registered-model.yml
+++ b/.github/workflows/07-deploy-registered-model.yml
@@ -23,6 +23,11 @@ jobs:
           --file endpoint.yml \
           --resource-group mslearn-prod-mlops-rg \
           --workspace-name mslearn-prod-mlops-aml \
+        || az ml online-endpoint update \
+          --file endpoint.yml \
+          --resource-group mslearn-prod-mlops-rg \
+          --workspace-name mslearn-prod-mlops-aml
+
     - name: Deploy registered model
       run: |
         az ml online-deployment create \
