--- a/.github/workflows/07-deploy-registered-model.yml
+++ b/.github/workflows/07-deploy-registered-model.yml
@@ -29,4 +29,5 @@ jobs:
         az ml online-deployment create \
           --file deployment.yml \
           --resource-group mslearn-prod-mlops-rg \
-          --workspace-name mslearn-prod-mlops-aml
+          --workspace-name mslearn-prod-mlops-aml \
+          --debug
