--- a/src/job.yml
+++ b/src/job.yml
@@ -8,7 +8,7 @@ inputs:
   training_data:
     type: uri_folder
   reg_rate: 0.01
-environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
+environment: azureml:sklearn-1.5.26:26 # <--- Updated to the Python 3.10 Scikit-learn env
 compute: azureml:aml-cluster
 experiment_name: diabetes-data-example
 description: Train a classification model on diabetes data using a registered dataset as input.
