--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -16,4 +16,4 @@ jobs:
       with:
         creds: ${{secrets.AZURE_CREDENTIALS}}
     - name: Submit Azure ML job
-      run: az ml job create --file src/job.yml --resource-group mslearn-mlops-rg --workspace-name mslearn-mlops-aml
+      run: az ml job create --file src/job.yml --resource-group mslearn-prod-mlops-rg --workspace-name mslearn-prod-mlops-aml
