--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Azure login
       uses: azure/login@v1
       with:
-        creds: ${{secrets.AZURE_CREDENTIALS}}
+        creds: ${{secrets.AZURE_PROD_CREDENTIALS}}
     - name: Submit Azure ML job
       run: az ml job create --file src/job.yml --resource-group mslearn-prod-mlops-rg --workspace-name mslearn-prod-mlops-aml
